# jadid-core

./: .gitignore  CMakeLists.txt
data/: config.txt
includes/: SpriteRenderer.h  Transform.h  component.h  config.h  debug.h  engine.h  event_manager.h  game_object.h  image_renderer.h  input_manager.h  loader.h  prepare_sdl.h  renderQueue.h  render_queue.h  scene.h  scene_manager.h  script_manager.h  sprite_renderer.h  text_renderer.h  transform.h
scripts/: cli.py  test.py
src/bindings/: bindings.cpp
src/engine/: engine  main.cpp  prepare_sdl.cpp
src/engine/component/: SpriteRenderer.cpp  Transform.cpp  sprite_renderer.cpp  transform.cpp
src/engine/core/: config.cpp  engine.cpp  event_manager.cpp  input_manager.cpp  loader.cpp  loop_management_sdl.cpp  prepare_sdl.cpp
src/engine/object/: game_object.cpp  scene.cpp  scene_manager.cpp
src/engine/render/: debug.cpp  image_renderer.cpp  renderQueue.cpp  render_queue.cpp  renderer.cpp  text_renderer.cpp
src/engine/scripting/: script_manager.cpp
